[package]
name = "broadword"
version = "0.2.3-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Broadword algorithms"
repository = "https://github.com/tov/broadword-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["broadword", "u64", "select", "popcount"]

[dev-dependencies]
quickcheck = "0.6.2"
